fix: . in import, tests, cmdline

--- a/setup.cfg
+++ b/setup.cfg
@@ -64,8 +64,8 @@ testing =
 # And any other entry points, for example:
 # pyscaffold.cli =
 #     awesome = pyscaffoldext.awesome.extension:AwesomeExtension
-[console_scripts]
-pyomop = pyomop.main:main_routine
+console_scripts =
+    pyomop = pyomop.main:main_routine
 
 [test]
 # py.test options when running `python setup.py test`
@@ -78,7 +78,7 @@ extras = True
 # e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
 # in order to write a coverage file that can be read by Jenkins.
 addopts =
-    --cov pyomop --cov-report term-missing
+    #--cov pyomop --cov-report term-missing
     --verbose
 norecursedirs =
     dist
