docs update description

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@
 
 [metadata]
 name = pyomop
-description = OMOP CDM utils
+description = OMOP CDM utils in Python
 author = Bell Eapen
 author-email = github@gulfdoctor.net
 license = gpl3
