Configure tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -4,14 +4,19 @@
 
 [tox]
 minversion = 2.4
-envlist = default
+envlist = py37, integration
 
 [testenv]
 setenv = TOXINIDIR = {toxinidir}
-passenv =
-    HOME
+deps =
+    pytest
 commands =
     py.test {posargs}
 extras =
     all
     testing
+
+[testenv:integration]
+setenv = TOXINIDIR = {toxinidir}
+commands =
+    python t_install.py
