--- a/setup.cfg
+++ b/setup.cfg
@@ -27,14 +27,18 @@ classifiers =
 
 [options]
 zip_safe = False
-packages = find:
+packages = find_namespace:
 include_package_data = True
 package_dir =
     =src
 # DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
-setup_requires = pyscaffold>=3.2a0,<3.3a0
 # Add here dependencies of your project (semicolon/line-separated), e.g.
-install_requires = sqlalchemy<1.4; click; pandas; psycopg2
+install_requires =
+    importlib-metadata; python_version<"3.8"
+    sqlalchemy<1.4
+    click
+    pandas
+    psycopg2
 # The usage of test_requires is discouraged, see `Dependency Management` docs
 # tests_require = pytest; pytest-cov
 # Require a specific Python version, e.g. Python 2.7 or >= 3.4
@@ -115,7 +119,7 @@ exclude =
 [pyscaffold]
 # PyScaffold's parameters when the project was created.
 # This will be used when updating. Do not change!
-version = 3.2.3
+version = 4.0.2
 package = pyomop
 extensions =
     travis
