--- a/setup.cfg
+++ b/setup.cfg
@@ -35,6 +35,7 @@ package_dir =
 # Add here dependencies of your project (semicolon/line-separated), e.g.
 install_requires =
     importlib-metadata; python_version<"3.8"
+    sqlacodegen
     sqlalchemy<1.4
     click
     pandas
