--- a/.github/workflows/tox.yml
+++ b/.github/workflows/tox.yml
@@ -23,8 +23,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install tox
+        pip install -r dev-requirements.txt -r requirements.txt
     - name: Test with tox
       run: |
         tox
