--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ numpy==1.21.1
     # via pandas
 pandas==1.3.1
     # via pyomop (setup.py)
-psycopg2==2.9.1
+psycopg2-binary==2.9.1
     # via pyomop (setup.py)
 python-dateutil==2.8.2
     # via pandas
