--- a/setup.cfg
+++ b/setup.cfg
@@ -12,7 +12,7 @@ url = https://github.com/dermatologist/pyomop
 long-description = file: README.md
 long-description-content-type = text/markdown; charset=UTF-8
 project-urls =
-    Documentation = https://pyscaffold.org/
+    Documentation = https://dermatologist.github.io/pyomop/
 # Change if running only on Windows, Mac or Linux (comma-separated)
 platforms = any
 # Add here all kinds of additional classifiers as defined under
