--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,8 @@ envlist = py38, integration
 [testenv]
 setenv = TOXINIDIR = {toxinidir}
 deps =
-    pytest
+    -rrequirements.txt
+    -rdev-requirements.txt
 commands =
     py.test {posargs}
 extras =
@@ -18,5 +19,8 @@ extras =
 
 [testenv:integration]
 setenv = TOXINIDIR = {toxinidir}
+deps =
+    -rrequirements.txt
+    -rdev-requirements.txt
 commands =
     python t_install.py
