Update dependencies and switch to async database engine

--- a/setup.cfg
+++ b/setup.cfg
@@ -39,7 +39,7 @@ install_requires =
     sqlalchemy<1.4
     click
     pandas
-    psycopg2-binary
+    aiosqlite
 # The usage of test_requires is discouraged, see `Dependency Management` docs
 # tests_require = pytest; pytest-cov
 # Require a specific Python version, e.g. Python 2.7 or >= 3.4
