Update Python versions in Dockerfile, devcontainer.json, workflows, and requirements.txt

--- a/setup.cfg
+++ b/setup.cfg
@@ -36,7 +36,7 @@ package_dir =
 install_requires =
     importlib-metadata; python_version<"3.8"
     sqlacodegen
-    sqlalchemy<1.4
+    sqlalchemy>=1.4
     click
     pandas
     aiosqlite
