--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -13,10 +13,11 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    timeout-minutes: 15
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [3.7]
+        python-version: [3.10.13]
 
     steps:
     - uses: actions/checkout@v3
