--- a/requirements.txt
+++ b/requirements.txt
@@ -6,38 +6,23 @@
 #
 aiosqlite==0.19.0
     # via pyomop (setup.py)
-annotated-types==0.6.0
-    # via pydantic
 click==8.1.7
     # via pyomop (setup.py)
 greenlet==3.0.1
     # via sqlalchemy
-inflect==7.0.0
-    # via sqlacodegen
 numpy==1.26.2
     # via pandas
 pandas==2.1.3
     # via pyomop (setup.py)
-pydantic==2.4.2
-    # via inflect
-pydantic-core==2.10.1
-    # via pydantic
 python-dateutil==2.8.2
     # via pandas
 pytz==2023.3.post1
     # via pandas
 six==1.16.0
     # via python-dateutil
-sqlacodegen==2.3.0.post1
+sqlalchemy==2.0.23
     # via pyomop (setup.py)
-sqlalchemy==1.4.50
-    # via
-    #   pyomop (setup.py)
-    #   sqlacodegen
 typing-extensions==4.8.0
-    # via
-    #   inflect
-    #   pydantic
-    #   pydantic-core
+    # via sqlalchemy
 tzdata==2023.3
     # via pandas
