--- a/setup.cfg
+++ b/setup.cfg
@@ -54,6 +54,9 @@ exclude =
 # `pip install pyomop[PDF]` like:
 # PDF = ReportLab; RXP
 # Add here test requirements (semicolon/line-separated)
+llm =
+    llama-index
+    
 testing =
     pytest
     pytest-cov
