Add langchain dependency and import asyncio
Update get_table_columns and get_single_table_info methods to use asyncio.run()

Import HuggingFaceEmbeddings and update CdmLLMQuery constructor

--- a/setup.cfg
+++ b/setup.cfg
@@ -56,7 +56,8 @@ exclude =
 # Add here test requirements (semicolon/line-separated)
 llm =
     llama-index
-    
+    langchain==0.0.350
+
 testing =
     pytest
     pytest-cov
