--- a/requirements.txt
+++ b/requirements.txt
@@ -4,25 +4,27 @@
 #
 #    pip-compile
 #
-aiosqlite==0.19.0
+aiosqlite==0.20.0
     # via pyomop (setup.py)
 click==8.1.7
     # via pyomop (setup.py)
-greenlet==3.0.1
+greenlet==3.0.3
     # via sqlalchemy
-numpy==1.26.2
+numpy==2.0.0
     # via pandas
-pandas==2.1.3
+pandas==2.2.2
     # via pyomop (setup.py)
-python-dateutil==2.8.2
+python-dateutil==2.9.0.post0
     # via pandas
-pytz==2023.3.post1
+pytz==2024.1
     # via pandas
 six==1.16.0
     # via python-dateutil
-sqlalchemy==2.0.23
+sqlalchemy==2.0.31
     # via pyomop (setup.py)
-typing-extensions==4.8.0
-    # via sqlalchemy
-tzdata==2023.3
+typing-extensions==4.12.2
+    # via
+    #   aiosqlite
+    #   sqlalchemy
+tzdata==2024.1
     # via pandas
