--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -19,7 +19,7 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [3.10.13]
+        python-version: ['3.11']
 
     steps:
     - uses: actions/checkout@v4
