--- a/dev-requirements.in
+++ b/dev-requirements.in
@@ -2,6 +2,7 @@
 -c requirements.txt
 pytest-cov
 pytest
+py>=1.11.0 #https://github.com/pytest-dev/apipkg/issues/30 Keyerror __spec__
 recommonmark
 sphinx>=3.2.1
 setuptools
