--- a/dev-requirements.in
+++ b/dev-requirements.in
@@ -5,7 +5,7 @@ pytest
 py>=1.11.0 #https://github.com/pytest-dev/apipkg/issues/30 Keyerror __spec__
 recommonmark
 sphinx>=3.2.1
-setuptools
+setuptools<71.0.0 #https://github.com/pypa/setuptools/issues/4483
 setuptools_scm
 wheel
 tox
