chore: update GitHub Actions workflows to use 'uv' for dependency management and Python setup

--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@
 
 [tox]
 minversion = 3.15
-envlist = default, clean, build, docs, doctests, integration
+envlist = default, clean, build, docs, doctests
 
 
 [testenv]
@@ -12,9 +12,6 @@ description = invoke pytest to run automated tests
 isolated_build = True
 setenv =
     TOXINIDIR = {toxinidir}
-deps =
-    -rrequirements.txt
-    -rdev-requirements.txt
 passenv =
     HOME
 extras =
@@ -32,13 +29,9 @@ description =
 # NOTE: build is still experimental, please refer to the links for updates/issues
 skip_install = True
 changedir = {toxinidir}
-deps =
-    -rrequirements.txt
-    -rdev-requirements.txt
-    build: build[virtualenv]
 commands =
     clean: python -c 'from shutil import rmtree; rmtree("build", True); rmtree("dist", True)'
-    build: python -m build .
+    build: python setup.py sdist
 # By default `build` produces wheels, you can also explicitly use the flags `--sdist` and `--wheel`
 
 
@@ -74,8 +67,5 @@ commands =
 
 [testenv:integration]
 setenv = TOXINIDIR = {toxinidir}
-deps =
-    -rrequirements.txt
-    -rdev-requirements.txt
 commands =
     python t_install.py
