--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -11,17 +11,21 @@ jobs:
     timeout-minutes: 15
     steps:
     - uses: actions/checkout@v4
-    - name: Set up Python
-      uses: actions/setup-python@v5.3.0
+    - name: Install uv
+      uses: astral-sh/setup-uv@v5
       with:
-        python-version: '3.11'
+        enable-cache: true
+    - name: "Set up Python"
+      uses: actions/setup-python@v5
+      with:
+          python-version-file: "pyproject.toml"
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt -r dev-requirements.txt
+        uv sync --all-extras --dev
+        uv pip install -r docs/requirements.txt
     - name: Create docs
       run: |
-        make -C docs/ html
+        uv run python -m sphinx -b html docs/ docs/_build/html
         cp docs/_config.yml docs/_build/html/_config.yml
     - name: Deploy Docs 🚀
       uses: JamesIves/github-pages-deploy-action@v4
