--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -13,8 +13,6 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    env:
-      CI: true
     timeout-minutes: 10
     strategy:
       max-parallel: 4
@@ -23,15 +21,17 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v5.3.0
+    - name: Install uv
+      uses: astral-sh/setup-uv@v5
       with:
-        python-version: ${{ matrix.python-version }}
-        cache: 'pip' # caching pip dependencies
+        enable-cache: true
+    - name: "Set up Python"
+      uses: actions/setup-python@v5
+      with:
+          python-version-file: "pyproject.toml"
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install -r dev-requirements.txt -r requirements.txt
-    - name: Test with pytest
-      run: |
-        pytest
+        uv sync --all-extras --dev
+
+    - name: Run tests
+      run: uv run pytest tests
