--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ description = "OMOP CDM utils in Python"
 license = "GPL-3.0"
 classifiers = [ "Intended Audience :: Science/Research", "Development Status :: 4 - Beta", "Operating System :: OS Independent", "Programming Language :: Python", "Programming Language :: Python :: 3.11", "Topic :: Scientific/Engineering :: Information Analysis",]
 requires-python = ">=3.11, <3.12"
-dependencies = [ "importlib-metadata; python_version<\"3.8\"", "sqlalchemy>=1.4", "click", "pandas", "aiosqlite",]
+dependencies = [ "importlib-metadata; python_version<\"3.8\"", "sqlalchemy>=1.4", "click", "pandas", "aiosqlite", "requests",]
 dynamic = [ "version",]
 
 [[project.authors]]
