Feature/new model (#223)
* Merge branch 'new-models-1'

* test: refactor patient creation tests for CDM6 and CDM54

* refactor: update CdmVocabulary version to cdm54 and add tests for cdm54

* refactor: update CdmVocabulary to handle versioning for CDM6 and CDM54 in tests

* refactor: update vector creation tests for CDM6 and CDM54 with proper cleanup and assertions

* refactor: rename test_create_cohort to test_create_cohort_cdm54 and update metadata fixture

* refactor: update imports and logging in LLM example and init files

* refactor: update LLM warning message and adjust imports in t_install.py

* refactor: update usage example in README.md to reflect changes in CdmVocabulary initialization

* refactor: add type ignore comments for session and SQL query handling in llm_example.py

* refactor: remove unused Cdm54Test and Cdm6Test classes from cdm54_tables.py and cdm6_tables.py

* refactor: add version parameter to CDMDatabase and update metadata handling in llm_engine.py

* refactor: clean up whitespace and improve code formatting in cdm54_tables.py, cdm6_tables.py, engine_factory.py, and vocabulary.py

* refactor: improve code formatting and consistency across test files

* refactor: improve code formatting and consistency in llm_example.py

* refactor: update file headers in cdm54_tables.py and cdm6_tables.py for clarity and licensing

* refactor: update README.md for clarity and improved structure

* docs: enhance overview section in README.md for clarity

* feat: add requests dependency and implement query library functionality in CdmVector

* feat: enhance query_library functionality by removing @cdm. and @vocab. references and adding Person entity in tests

* feat: implement query library functionality and enhance DataFrame conversion in CdmVector

* feat: refactor CdmVector methods for improved query execution and DataFrame conversion

* feat: enhance usage examples in README and add Person entity to t_install.py

* feat: add Person entity import to usa

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ description = "OMOP CDM utils in Python"
 license = "GPL-3.0"
 classifiers = [ "Intended Audience :: Science/Research", "Development Status :: 4 - Beta", "Operating System :: OS Independent", "Programming Language :: Python", "Programming Language :: Python :: 3.11", "Topic :: Scientific/Engineering :: Information Analysis",]
 requires-python = ">=3.11, <3.12"
-dependencies = [ "importlib-metadata; python_version<\"3.8\"", "sqlalchemy>=1.4", "click", "pandas", "aiosqlite",]
+dependencies = [ "importlib-metadata; python_version<\"3.8\"", "sqlalchemy>=1.4", "click", "pandas", "aiosqlite", "requests",]
 dynamic = [ "version",]
 
 [[project.authors]]
@@ -25,11 +25,12 @@ Homepage = "https://github.com/dermatologist/pyomop"
 Documentation = "https://dermatologist.github.io/pyomop/"
 
 [project.optional-dependencies]
-llm = [ "llama-index", "llama-index-experimental", "langchain", "langchain-community", "langchain-huggingface", "llama-index-embeddings-langchain", "overrides", "llama-index-llms-google-genai",]
+llm = [ "llama-index", "llama-index-experimental", "langchain", "langchain-community", "langchain-huggingface", "llama-index-embeddings-langchain", "overrides", "llama-index-llms-google-genai", "llama-index-llms-langchain",]
 testing = [ "setuptools", "pytest", "pytest-cov",]
 dev = [
     "setuptools>=77.0.0",
     "packaging>=24.2",
+    "llama-index-llms-langchain",
     "setuptools_scm",
     "pytest",
     "pytest-cov",
